[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scenes/Weapons/AquaRocket.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_05.png" type="Texture" id=2]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_01.png" type="Texture" id=3]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_02.png" type="Texture" id=4]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_03.png" type="Texture" id=5]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_07.png" type="Texture" id=6]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_08.png" type="Texture" id=7]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_09.png" type="Texture" id=8]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_10.png" type="Texture" id=9]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_11.png" type="Texture" id=10]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_12.png" type="Texture" id=11]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_13.png" type="Texture" id=12]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_14.png" type="Texture" id=13]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_15.png" type="Texture" id=14]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_16.png" type="Texture" id=15]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_17.png" type="Texture" id=16]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_18.png" type="Texture" id=17]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_19.png" type="Texture" id=18]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_20.png" type="Texture" id=19]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_21.png" type="Texture" id=20]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_22.png" type="Texture" id=21]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_23.png" type="Texture" id=22]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_24.png" type="Texture" id=23]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_25.png" type="Texture" id=24]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_26.png" type="Texture" id=25]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_27.png" type="Texture" id=26]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_28.png" type="Texture" id=27]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_29.png" type="Texture" id=28]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_30.png" type="Texture" id=29]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_31.png" type="Texture" id=30]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_06.png" type="Texture" id=31]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_04.png" type="Texture" id=32]
[ext_resource path="res://assets/weapons/aqua-rocket/aqua-rocket_00.png" type="Texture" id=33]
[ext_resource path="res://nodes/Bubbles.tscn" type="PackedScene" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 32 ), ExtResource( 2 ), ExtResource( 31 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.04084
height = 19.1501

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_random = 0.2

[node name="AquaRocket" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 12
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Particles2D" parent="." instance=ExtResource( 34 )]
position = Vector2( -10.4563, -0.0107203 )
process_material = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
